[gd_scene load_steps=24 format=3 uid="uid://btl3jr62tuq4x"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_b7y2o"]
[ext_resource type="Script" uid="uid://datewepi15eto" path="res://addons/CustomControls/Dialogs/CommandEvents/change_actor_state_dialog.gd" id="2_n2c08"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="3_2t2gs"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="4_w0g4y"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="5_vn43t"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="7_osnhq"]

[sub_resource type="Gradient" id="Gradient_7ascj"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ourej"]
gradient = SubResource("Gradient_7ascj")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6r06"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_ctwx1"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ujmr3"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubopt"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_ujmr3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6j11"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ButtonGroup" id="ButtonGroup_x53ls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kp582"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gj2ul"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e5fsd"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_gj2ul")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtt7l"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ButtonGroup" id="ButtonGroup_u8n8i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf0ug"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hqftt"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m7qlw"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_hqftt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmv63"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ChangeActorStateDialog" type="Window"]
title = "Change State"
position = Vector2i(0, 36)
size = Vector2i(400, 390)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_b7y2o")
script = ExtResource("2_n2c08")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ourej")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ContentsPanel1" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_2t2gs")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p6r06")
style1 = SubResource("StyleBoxFlat_p6r06")
style2 = SubResource("StyleBoxTexture_ubopt")
style3 = SubResource("StyleBoxFlat_y6j11")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentsPanel1"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Actor"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fixed" type="CheckBox" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
tooltip_text = "Directly specifies the actor to be targeted."
mouse_default_cursor_shape = 2
button_pressed = true
button_group = SubResource("ButtonGroup_x53ls")
text = "Fixed"

[node name="FixedValue" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_w0g4y")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Directly specifies the actor to be targeted."
selected = 0
item_count = 6
popup/item_0/text = "Entire Party"
popup/item_0/id = 0
popup/item_1/text = "1: Aiden"
popup/item_1/id = 1
popup/item_2/text = "2: Elara"
popup/item_2/id = 2
popup/item_3/text = "3: Thorne"
popup/item_3/id = 3
popup/item_4/text = "4: Lyra"
popup/item_4/id = 4
popup/item_5/text = "5: Gideon"
popup/item_5/id = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Variable" type="CheckBox" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
tooltip_text = "Uses the variable value as character ID."
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_x53ls")
text = "Variable"

[node name="VariableValue" parent="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_vn43t")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Uses the variable value as character ID."
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
disabled = true
text = "1: "

[node name="ContentsPanel2" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_2t2gs")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kp582")
style1 = SubResource("StyleBoxFlat_kp582")
style2 = SubResource("StyleBoxTexture_e5fsd")
style3 = SubResource("StyleBoxFlat_vtt7l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentsPanel2"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Operation"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Add" type="CheckBox" parent="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Adds the specified state."
mouse_default_cursor_shape = 2
button_pressed = true
button_group = SubResource("ButtonGroup_u8n8i")
text = "Add"

[node name="Remove" type="CheckBox" parent="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Subtracts the specified state."
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_u8n8i")
text = "Remove"

[node name="ContentsPanel3" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_2t2gs")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf0ug")
style1 = SubResource("StyleBoxFlat_gf0ug")
style2 = SubResource("StyleBoxTexture_m7qlw")
style3 = SubResource("StyleBoxFlat_tmv63")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentsPanel3"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentsPanel3/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "State"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentsPanel3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StateSelected" parent="MarginContainer/VBoxContainer/ContentsPanel3/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_vn43t")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "State to add or remove."
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "1: uno"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("7_osnhq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("7_osnhq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[connection signal="toggled" from="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer/Fixed" to="." method="_on_fixed_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer/FixedValue" to="." method="_on_fixed_value_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer2/Variable" to="." method="_on_variable_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContentsPanel1/MarginContainer/VBoxContainer/HBoxContainer2/VariableValue" to="." method="_on_variable_value_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer/HBoxContainer/Add" to="." method="_on_add_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ContentsPanel2/MarginContainer/VBoxContainer/HBoxContainer/Remove" to="." method="_on_remove_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContentsPanel3/MarginContainer/VBoxContainer/HBoxContainer2/StateSelected" to="." method="_on_state_selected_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
